--- a/src/index.njk
+++ b/src/index.njk
@@ -46,19 +46,20 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 							</li>
 							<li>
 								<sl-icon class="[ icon ]" library="fa" name="fas-code"></sl-icon>
-						Web Standards
-					</li>
+								Web Standards
+							</li>
 							<li>
 								<sl-icon class="[ icon ]" library="fa" name="fas-gears"></sl-icon>
-						Design Tokens
-					</li>
+								Design Tokens
+							</li>
 							<li>
 								<sl-icon class="[ icon ]" library="fa" name="fas-cubes"></sl-icon>
-						Design Systems</li>
+								Design Systems
+							</li>
 							<li>
 								<sl-icon class="[ icon ]" library="fa" name="fas-cube"></sl-icon>
-						Web Components
-					</li>
+								Web Components
+							</li>
 						</ul>
 					</details>
 				</details-utils>
@@ -67,7 +68,7 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 				🏳️‍⚧️ I'm an incredibly queer pansexual trans woman.
 			</li>
 			<li>
-				🧠 I'm an AuDHD (autistic and <a href="/notes/adhd"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) neurodivergent.
+				🧠 I'm an AuDHD (autistic and <a href="/garden/adhd"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) neurodivergent.
 			</li>
 			<li>
 				🐈‍⬛ I have a little rascal of a cat named <a href="/lulu">Lulu</a>, who I love to bits.
