--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -1,19 +1,15 @@
 {%- set absolutePageUrl -%}{{ page.url | url | absoluteUrl(site.url) }}{%- endset -%}
 {%- if title === "Home" -%}
 	{% set text = "Creating delightful, magical, and accessible art with code." %}
-	{% set tag = "Elly Loel" %}
 	{% set desc = description %}
 	{% set ogTitle = "Elly Loel" %}
+	{% set ogUrl = "" %}
 {% else %}
 	{% set text = title %}
-	{% set tag = "Elly Loel" %}
 	{% set desc = page.excerpt %}
 	{% set ogTitle = title %}
+	{% set ogUrl = page.url %}
 {% endif %}
-{% set image %}
-{% sscg overlayText = text,
-overlayTag = tag %}
-{% endset %}
 
 {# General #}
 <meta name="description" content="{{ desc }}">
@@ -31,11 +27,12 @@ overlayTag = tag %}
 <meta property="og:description" content="{{ desc }}">
 <meta property="og:url" content="{{ absolutePageUrl }}">
 <meta property="og:locale" content="{{ site.locale }}">
-<meta name="twitter:card" content="{% if image -%}summary_large_image{% else %}summary{% endif %}">
-{%- if image -%}
-	<meta property="og:image" content="{{ image | url | absoluteUrl(site.url) }}">
-	<meta property="og:image:alt" content="{{ text }}">
-{%- endif -%}
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:image" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
+<meta property="og:image" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
+<meta name="og:image" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
+<meta name="og:image:secure_url" content="https://v1.screenshot.11ty.dev/https%3A%2F%2Fellyloel.com%2Fog{{ ogUrl | urlencode }}/opengraph/">
+<meta property="og:image:alt" content="A background of curved purple lines with the text “{{ text }}” ontop, Elly's logo is in the bottom right corner.">
 
 {# Icons #}
 <link rel="manifest" href="{{ '/manifest.webmanifest' | url }}">
@@ -50,7 +47,6 @@ generateManifest = false %}
 
 {# Webmentions #}
 <link href="https://github.com/ellyloel" rel="me">
-<link href="https://tech.lgbt/@ellyloel" rel="me">
 <link href="https://front-end.social/@elly" rel="me">
-<link rel="webmention" href="https://webmention.io/www.ellyloel.com/webmention"/>
-<link rel="pingback" href="https://webmention.io/www.ellyloel.com/xmlrpc"/>
+<link rel="webmention" href="https://webmention.io/www.ellyloel.com/webmention">
+<link rel="pingback" href="https://webmention.io/www.ellyloel.com/xmlrpc">
