📝 content: obsidian commit

--- a/src/layouts/og.njk
+++ b/src/layouts/og.njk
@@ -63,7 +63,7 @@
 
         color: black;
         font-size: 3rem;
-        font-family: 'Nanum Pen Script', cursive;
+        font-family: 'Nanum Pen Script';
         line-height: 1;
         
         background-color: white;
