--- a/src/css/blocks/prism.css
+++ b/src/css/blocks/prism.css
@@ -6,8 +6,7 @@
  */
 
 [color-scheme|="light"] {
-  & code[class*="language-"],
-  & pre[class*="language-"] {
+  & :is(code, pre)[class*="language-"] {
     color: #403f53;
     font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     text-align: left;
@@ -27,31 +26,26 @@
     hyphens: none;
   }
 
-  & pre[class*="language-"]::-moz-selection,
-  & pre[class*="language-"] ::-moz-selection,
-  & code[class*="language-"]::-moz-selection,
-  & code[class*="language-"] ::-moz-selection {
+  & :is(pre, code)[class*="language-"]::-moz-selection,
+  & :is(pre, code)[class*="language-"] ::-moz-selection {
     text-shadow: none;
     background: #e0e0e0;
   }
 
-  & pre[class*="language-"]::selection,
-  & pre[class*="language-"] ::selection,
-  & code[class*="language-"]::selection,
-  & code[class*="language-"] ::selection {
+  & :is(pre, code)[class*="language-"]::selection,
+  & :is(pre, code)[class*="language-"] ::selection {
     text-shadow: none;
     background: #e0e0e0;
   }
 
   @media print {
-    & code[class*="language-"],
-    & pre[class*="language-"] {
+    & :is(code, pre)[class*="language-"] {
       text-shadow: none;
     }
   }
 
   /* Code blocks */
-  & pre[class*="language-"] {
+  & :is(pre[class*="language-"]) {
     padding: 1em;
     margin: 0.5em 0;
     overflow: auto;
@@ -69,89 +63,69 @@
     white-space: normal;
   }
 
-  & .token.comment,
-  & .token.prolog,
-  & .token.cdata {
+  & .token:is(.comment, .prolog, .cdata) {
     color: rgb(152, 159, 177);
   }
 
-  & .token.punctuation {
+  & :is(.token.punctuation) {
     color: rgb(153, 76, 195);
   }
 
-  & .namespace {
+  & :is(.namespace) {
     color: rgb(12, 150, 155);
   }
 
-  & .token.deleted {
+  & :is(.token.deleted) {
     color: rgba(239, 83, 80, 0.56);
   }
 
-  & .token.symbol,
-  & .token.operator,
-  & .token.keyword,
-  & .token.property {
+  & .token:is(.symbol, .operator, .keyword, .property) {
     color: rgb(12, 150, 155);
   }
 
-  & .token.tag {
+  & :is(.token.tag) {
     color: rgb(153, 76, 195);
   }
 
-  & .token.boolean {
+  & :is(.token.boolean) {
     color: rgb(188, 84, 84);
   }
 
-  & .token.number {
+  & :is(.token.number) {
     color: rgb(170, 9, 130);
   }
 
-  & .token.constant,
-  & .token.builtin,
-  & .token.string,
-  & .token.url,
-  & .token.entity,
-  & .language-css .token.string,
-  & .style .token.string,
-  & .token.char {
+  & .token:is(.constant, .builtin, .string, .url, .entity, .char),
+  & :is(.language-css, .style) .token.string {
     color: rgb(72, 118, 214);
   }
 
-  & .token.selector,
-  & .token.function,
-  & .token.doctype {
+  & .token:is(.selector, .function, .doctype) {
     color: rgb(153, 76, 195);
   }
 
-  & .token.attr-name,
-  & .token.inserted {
+  & .token:is(.attr-name, .inserted) {
     color: rgb(72, 118, 214);
   }
 
-  & .token.class-name,
-  & .token.atrule,
-  & .token.attr-value {
+  & .token:is(.class-name, .atrule, .attr-value) {
     color: rgb(17, 17, 17);
   }
 
-  & .token.regex,
-  & .token.important,
-  & .token.variable {
+  & .token:is(.regex, .important, .variable) {
     color: rgb(201, 103, 101);
   }
 
-  & .token.important,
-  & .token.bold {
+  & .token:is(.important, .bold) {
     font-weight: bold;
   }
 
-  & .token.italic {
+  & :is(.token.italic) {
   }
 }
 
 [color-scheme|="dark"] {
-  & code[class*="language-"],
-  & pre[class*="language-"] {
+  & :is(code, pre)[class*="language-"] {
     color: #d6deeb;
     font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     text-align: left;
@@ -171,31 +145,26 @@
     hyphens: none;
   }
 
-  & pre[class*="language-"]::-moz-selection,
-  & pre[class*="language-"] ::-moz-selection,
-  & code[class*="language-"]::-moz-selection,
-  & code[class*="language-"] ::-moz-selection {
+  & :is(pre, code)[class*="language-"]::-moz-selection,
+  & :is(pre, code)[class*="language-"] ::-moz-selection {
     text-shadow: none;
     background: rgba(29, 59, 83, 0.99);
   }
 
-  & pre[class*="language-"]::selection,
-  & pre[class*="language-"] ::selection,
-  & code[class*="language-"]::selection,
-  & code[class*="language-"] ::selection {
+  & :is(pre, code)[class*="language-"]::selection,
+  & :is(pre, code)[class*="language-"] ::selection {
     text-shadow: none;
     background: rgba(29, 59, 83, 0.99);
   }
 
   @media print {
-    & code[class*="language-"],
-    & pre[class*="language-"] {
+    & :is(code, pre)[class*="language-"] {
       text-shadow: none;
     }
   }
 
   /* Code blocks */
-  & pre[class*="language-"] {
+  & :is(pre[class*="language-"]) {
     padding: 1em;
     margin: 0.5em 0;
     overflow: auto;
@@ -213,129 +182,106 @@
     white-space: normal;
   }
 
-  & .token.comment,
-  & .token.prolog,
-  & .token.cdata {
+  & .token:is(.comment, .prolog, .cdata) {
     color: rgb(99, 119, 119);
   }
 
-  & .token.punctuation {
+  & :is(.token.punctuation) {
     color: rgb(199, 146, 234);
   }
 
-  & .namespace {
+  & :is(.namespace) {
     color: rgb(178, 204, 214);
   }
 
-  & .token.deleted {
+  & :is(.token.deleted) {
     color: rgba(239, 83, 80, 0.56);
   }
 
-  & .token.symbol,
-  & .token.property {
+  & .token:is(.symbol, .property) {
     color: rgb(128, 203, 196);
   }
 
-  & .token.tag,
-  & .token.operator,
-  & .token.keyword {
+  & .token:is(.tag, .operator, .keyword) {
     color: rgb(127, 219, 202);
   }
 
-  & .token.boolean {
+  & :is(.token.boolean) {
     color: rgb(255, 88, 116);
   }
 
-  & .token.number {
+  & :is(.token.number) {
     color: rgb(247, 140, 108);
   }
 
-  & .token.constant,
-  & .token.function,
-  & .token.builtin,
-  & .token.char {
+  & .token:is(.constant, .function, .builtin, .char) {
     color: rgb(130, 170, 255);
   }
 
-  & .token.selector,
-  & .token.doctype {
+  & .token:is(.selector, .doctype) {
     color: rgb(199, 146, 234);
   }
 
-  & .token.attr-name,
-  & .token.inserted {
+  & .token:is(.attr-name, .inserted) {
     color: rgb(173, 219, 103);
   }
 
-  & .token.string,
-  & .token.url,
-  & .token.entity,
-  & .language-css .token.string,
-  & .style .token.string {
+  & .token:is(.constant, .builtin, .string, .url, .entity, .char),
+  & :is(.language-css, .style) .token.string {
     color: rgb(173, 219, 103);
   }
 
-  & .token.class-name,
-  & .token.atrule,
-  & .token.attr-value {
+  & .token:is(.class-name, .atrule, .attr-value) {
     color: rgb(255, 203, 139);
   }
 
-  & .token.regex,
-  & .token.important,
-  & .token.variable {
+  & .token:is(.regex, .important, .variable) {
     color: rgb(214, 222, 235);
   }
 
-  & .token.important,
-  & .token.bold {
+  & .token:is(.important, .bold) {
     font-weight: bold;
   }
 
-  & .token.italic {
+  & :is(.token.italic) {
   }
 }
 
 @media screen and (-ms-high-contrast: active) and (forced-colors: active) {
-  code[class*="language-"],
-  pre[class*="language-"] {
+  :is(code, pre)[class*="language-"] {
     color: windowText;
     background: window;
   }
 
-  :not(pre) > code[class*="language-"],
-  pre[class*="language-"] {
+  & :not(pre) > code[class*="language-"],
+  & pre[class*="language-"] {
     background: window;
   }
 
-  .token.important {
+  :is(.token.important) {
     background: highlight;
     color: window;
     font-weight: normal;
   }
 
-  .token.atrule,
-  .token.attr-value,
-  .token.function,
-  .token.keyword,
-  .token.operator,
-  .token.selector {
+  .token:is(.atrule, .attr-value, .function, .keyword, .operator, .selector) {
     font-weight: bold;
   }
 
-  .token.attr-value,
-  .token.comment,
-  .token.doctype,
-  .token.function,
-  .token.keyword,
-  .token.operator,
-  .token.property,
-  .token.string {
+  .token:is(
+      .attr-value,
+      .comment,
+      .doctype,
+      .function,
+      .keyword,
+      .operator,
+      .property,
+      .string
+    ) {
     color: highlight;
   }
 
-  .token.attr-value,
-  .token.url {
+  .token:is(.attr-value, .url) {
     font-weight: normal;
   }
 }
