--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,8 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 <div class="[ home ]">
 	<header class="[ hero ]">
 		<h1 aria-label="Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.">
-			<span class="detitlify">Hi, I’m <stylized-text label="Elly" class="[ logo-inline ]">&lt;e//y&gt;</stylized-text>
+			<span class="detitlify">
+				Hi, I’m <span class="[ logo-inline ]" aria-hidden="true" title="Elly">&lt;e//y&gt;</span><span class="[ visually-hidden ]">Elly</span>
 			</span>
 			<span>I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
 		</h1>
