--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -19,7 +19,7 @@
 
 {# Style #}
 <meta name="color-scheme" content="dark light">
-<meta name="theme-color" content="hsl(269, 75, 58)">
+<meta name="theme-color" content="#bd93f9">
 
 {# Open Graph #}
 <meta property="og:site_name" content="{{ site.title }}">
