--- a/src/includes/webmention.njk
+++ b/src/includes/webmention.njk
@@ -4,16 +4,20 @@
 			<a href="{{ mention.author.url }}" class="[ author-wrapper ]">
 				<sl-avatar
 					class="[ author-photo-image ]"
-					image="{{ mention.author.photo }}"
+					image="{{ mention.author.photo | imageLink }}"
 					initials="{{ mention.author.name[0] }}"
-					label="{{ mention.author.name }}"></sl-avatar>
+					label=""
+				></sl-avatar>
 				<strong class="[ author-name ]">{{ mention.author.name }}</strong>
 			</a>
 		{% else %}
-			<div class="[ author-photo-wrapper ]">
-				<img src="/static/images/webmention-avatar-default.svg" alt="" class="[ author-photo-image ]" loading="lazy" decoding="async" width="48" height="48">
-			</div>
-			<strong class="[ author-name ]">Anonymous</strong>
+			<span class="[ author-wrapper ]">
+				<sl-avatar
+					class="[ author-photo-image ]"
+					label=""
+				></sl-avatar>
+				<strong class="[ author-name ]">Anonymous</strong>
+			</span>
 		{% endif %}
 		<small class="[ date ]">
 			<a href="{{ mention.url }}">
