🐛 fix: fixing a11y issues

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,5 +1,5 @@
 {% include "theme-switcher.njk" %}
-<header role="banner" class="site-head">
+<header class="site-head">
 	<div class="[ nav-wrapper ]">
 		{% include "navigation.njk" %}
 	</div>
