--- a/src/includes/newsletter.njk
+++ b/src/includes/newsletter.njk
@@ -54,7 +54,7 @@
 				<label for="bd-email">Email</label>
 				<input type="email" name="email" id="bd-email">
 			</div>
-			<button>✨ Subscribe ✨</button>
+			<button type="submit">✨ Subscribe ✨</button>
 		</div>
 	</div>
 </form>
