--- a/src/includes/webmentions.njk
+++ b/src/includes/webmentions.njk
@@ -52,7 +52,7 @@
 					required="required"
 					class="[ input ]">
 				<input type="hidden" name="target" value="{{ site.url }}{{ page.url }}">
-				<button>Send</button>
+				<button type="submit">Send</button>
 			</div>
 		</form>
 		<small>
