--- a/src/index.njk
+++ b/src/index.njk
@@ -6,11 +6,12 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 
 <div class="[ home ]">
 	<header class="[ hero ]">
-		<h1 aria-label="Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.">
-			<span class="detitlify">
-				Hi, I’m <span class="[ logo-inline ]" aria-hidden="true" title="Elly">&lt;e//y&gt;</span><span class="[ visually-hidden ]">Elly</span>
+		<h1>
+			<span class="visually-hidden">Hi, I'm Elly. I like creating delightful, magical, and accessible art with code.</span>
+			<span class="detitlify" aria-hidden="true">
+				Hi, I’m <span class="[ logo-inline ]" title="Elly">&lt;e//y&gt;</span>
 			</span>
-			<span>I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
+			<span aria-hidden="true">I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
 		</h1>
 		<div id="lego" class="[ lego-container ]">
 			<model-viewer loading="lazy" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.gltf" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
