--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -47,7 +47,7 @@
 		{%- include "header.njk" -%}
 
 		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-		<main id="content" role="main" tabindex="-1" class="[ wrapper flow ]" style="--wrapper-size: 100ch;">
+		<main id="content" tabindex="-1" class="[ wrapper flow ]" style="--wrapper-size: 100ch;">
 			{{ content | safe }}
 		</main>
 
