--- a/src/layouts/og.njk
+++ b/src/layouts/og.njk
@@ -70,8 +70,8 @@
         mix-blend-mode: lighten;
       }
     </style>
-    <link rel="stylesheet" href="/@input/css/fonts.css">
-    <script type="module" src="/@input/js/css-doodle.js"></script>
+    <link rel="stylesheet" href="/css/fonts.css">
+    <script type="module" src="/js/css-doodle.js"></script>
   </head>
   <body>
     <css-doodle>
