🧹 chore: upgrading and removing dependencies

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -44,16 +44,16 @@ eleventyNavigation:
 {%- endfor -%}
 
 <sl-select class="[ stage ]" placeholder="All stages" label="Filter by stage" size="large" multiple clearable>
-  <sl-menu-item value="draft">
+  <sl-option value="draft">
     <sl-icon slot="prefix" class="[ icon ]" library="fa" name="fas-file-pen"></sl-icon>
     Draft
     <sl-badge slot="suffix" variant="neutral" pill>{{ draftCount }}</sl-badge>
-  </sl-menu-item>
-  <sl-menu-item value="complete">
+  </sl-option>
+  <sl-option value="complete">
     <sl-icon slot="prefix" class="[ icon ]" library="fa" name="fas-circle-check"></sl-icon>
     Complete
     <sl-badge slot="suffix" variant="neutral" pill>{{ completeCount }}</sl-badge>
-  </sl-menu-item>
+  </sl-option>
 </sl-select>
 
 <ul class="[ feed ]">
