--- a/src/css/blocks/feed.css
+++ b/src/css/blocks/feed.css
@@ -26,7 +26,7 @@
   }
 }
 
-sl-select:has(sl-menu-item[value="seedling"][checked]) ~ .feed {
+sl-select:has(sl-option[value="seedling"][checked]) ~ .feed {
   & .seedling {
     display: list-item;
   }
@@ -36,7 +36,7 @@ sl-select:has(sl-menu-item[value="seedling"][checked]) ~ .feed {
   }
 }
 
-sl-select:has(sl-menu-item[value="budding"][checked]) ~ .feed {
+sl-select:has(sl-option[value="budding"][checked]) ~ .feed {
   & .budding {
     display: list-item;
   }
@@ -46,7 +46,7 @@ sl-select:has(sl-menu-item[value="budding"][checked]) ~ .feed {
   }
 }
 
-sl-select:has(sl-menu-item[value="evergreen"][checked]) ~ .feed {
+sl-select:has(sl-option[value="evergreen"][checked]) ~ .feed {
   & .evergreen {
     display: list-item;
   }
@@ -56,7 +56,7 @@ sl-select:has(sl-menu-item[value="evergreen"][checked]) ~ .feed {
   }
 }
 
-sl-select:has(sl-menu-item[value="draft"][checked]) ~ .feed {
+sl-select:has(sl-option[value="draft"][checked]) ~ .feed {
   & .draft {
     display: list-item;
   }
@@ -66,7 +66,7 @@ sl-select:has(sl-menu-item[value="draft"][checked]) ~ .feed {
   }
 }
 
-sl-select:has(sl-menu-item[value="complete"][checked]) ~ .feed {
+sl-select:has(sl-option[value="complete"][checked]) ~ .feed {
   & .complete {
     display: list-item;
   }
