--- a/src/includes/webmentions-facepile.njk
+++ b/src/includes/webmentions-facepile.njk
@@ -1,4 +1,7 @@
 <div class="[ facepile ]">
+	<h3>
+		{{ facepileMentionsHeading }}
+	</h3>
 	{% for facepileMention in facepileMentions %}
 		<a href="{{ facepileMention.author.url }}" class="[ face-link ]">
 			<sl-avatar
