--- a/src/_includes/webmentions.njk
+++ b/src/_includes/webmentions.njk
@@ -55,7 +55,7 @@
 					placeholder="https://example.com"
 					required="required"
 					class="[ input ]">
-				<input type="hidden" name="target" value="{{ site.url }}{{ page.url }}">
+				<input type="hidden" name="target" value="{{ metadata.url }}{{ page.url }}">
 				<button type="submit">Send</button>
 			</div>
 		</form>
