--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang }}">
+<html lang="{{ metadata.lang }}">
 	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
 	<head>
 		<meta charset="utf-8">
