--- a/src/feeds/feed.atom.njk
+++ b/src/feeds/feed.atom.njk
@@ -1,40 +1,26 @@
----json
-{
-  "permalink": "/public/feed.atom",
-  "eleventyExcludeFromCollections": true,
-  "site": {
-    "title": "Elly Loel",
-    "description": "This is my own lovely little corner of the internet. Look forward to plenty of interesting ideas & projects.",
-    "lang": "en",
-    "url": "https://ellyloel.com/",
-    "author": {
-      "name": "Elly Loel",
-      "email": "hello@ellyloel.com",
-    	"url": "https://ellyloel.com/about/"
-    }
-  }
-}
+---
+permalink: "/public/feed.atom"
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ site.url }}">
-	<title>{{ site.title }}</title>
-	<subtitle>{{ site.description }}</subtitle>
-	<link href="{{ '/feed.atom' | absoluteUrl(site.url) }}" rel="self"/>
-	<link href="{{ site.url }}"/>
+<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.url }}">
+	<title>{{ metadata.title }}</title>
+	<subtitle>{{ metadata.description }}</subtitle>
+	<link href="{{ '/feed.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
+	<link href="{{ metadata.url }}"/>
 	<updated>{{ collections.allPostTypes | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
-	<id>{{ site.url }}</id>
+	<id>{{ metadata.url }}</id>
 	<author>
-		<name>{{ site.author.name }}</name>
-		<email>{{ site.author.email }}</email>
+		<name>{{ metadata.author.name }}</name>
+		<email>{{ metadata.author.email }}</email>
 	</author>
 	{%- for post in collections.allPostTypes | reverse %}
-		{%- set absolutePostUrl = post.url | absoluteUrl(site.url) %}
+		{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
 		<entry>
 			<title>{{ post.data.title }}</title>
 			<link href="{{ absolutePostUrl }}"/>
 			<updated>{{ post.date | dateToRfc3339 }}</updated>
 			<id>{{ absolutePostUrl }}</id>
-			<content xml:lang="{{ site.lang }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+			<content xml:lang="{{ metadata.lang }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
 		</entry>
 	{%- endfor %}
 </feed>
