--- a/src/feeds/feed.rss.njk
+++ b/src/feeds/feed.rss.njk
@@ -1,36 +1,22 @@
----json
-{
-  "permalink": "/public/feed.rss",
-  "eleventyExcludeFromCollections": true,
-  "site": {
-    "title": "Elly Loel",
-    "description": "This is my own lovely little corner of the internet. Look forward to plenty of interesting ideas & projects.",
-    "lang": "en",
-    "url": "https://ellyloel.com/",
-    "author": {
-      "name": "Elly Loel",
-      "email": "hello@ellyloel.com",
-    	"url": "https://ellyloel.com/about/"
-    }
-  }
-}
+---
+permalink: "/public/feed.rss"
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ site.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
 	<channel>
-		<title>{{ site.title }}</title>
-		<link>{{ site.url }}</link>
-		<atom:link href="{{ '/feed.rss' | absoluteUrl(site.url) }}" rel="self" type="application/rss+xml"/>
-		<description>{{ site.description }}</description>
-		<language>{{ site.lang }}</language>
+		<title>{{ metadata.title }}</title>
+		<link>{{ metadata.url }}</link>
+		<atom:link href="{{ '/feed.rss' | absoluteUrl(metadata.url) }}" rel="self" type="application/rss+xml"/>
+		<description>{{ metadata.description }}</description>
+		<language>{{ metadata.lang }}</language>
 		{%- for post in collections.allPostTypes | reverse %}
-			{%- set absolutePostUrl = post.url | absoluteUrl(site.url) %}
+			{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
 			<item>
 				<title>{{ post.data.title }}</title>
 				<link>{{ absolutePostUrl }}</link>
 				<description>{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</description>
 				<pubDate>{{ post.date | dateToRfc822 }}</pubDate>
-				<dc:creator>{{ site.author.name }}</dc:creator>
+				<dc:creator>{{ metadata.author.name }}</dc:creator>
 				<guid>{{ absolutePostUrl }}</guid>
 			</item>
 		{%- endfor %}
