--- a/src/robots.txt.njk
+++ b/src/robots.txt.njk
@@ -7,4 +7,4 @@ eleventyExcludeFromCollections: true
 User-agent: *
 Disallow: 
 
-Sitemap: {{ site.url }}/sitemap.xml
+Sitemap: {{ metadata.url }}/sitemap.xml
