✨ feat: adding eleventy import

--- a/src/garden.njk
+++ b/src/garden.njk
@@ -5,6 +5,8 @@ eleventyNavigation:
   key: Digital garden
   parent: Writing
   order: 1
+eleventyImport:
+  collections: ["garden"]
 ---
 
 <p>A collection of my ideas that I'm nurturing out in the open. The notes range from seedlings, which are fresh out of my mind, to budding, which are developing, to evergreen, which are polished ideas.</p>
