--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,8 @@
 layout: base-without-header
 title: Home
 description: Hi, I’m Elly. I like creating delightful, magical, and accessible art with code.
+eleventyImport:
+  collections: ["allPostTypes"]
 ---
 
 <div class="[ home ]">
