--- a/src/til.njk
+++ b/src/til.njk
@@ -5,6 +5,8 @@ eleventyNavigation:
   key: TIL
   parent: Writing
   order: 3
+eleventyImport:
+  collections: ["til"]
 ---
 
 <dfn>Today I Learned</dfn>
