--- a/src/feeds/bookmarks.atom.njk
+++ b/src/feeds/bookmarks.atom.njk
@@ -1,5 +1,5 @@
 ---
-permalink: "/public/bookmarks.atom"
+permalink: "/bookmarks.atom"
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.url }}">
